perf:添加manager层对Service层通用能力下沉